[gd_scene load_steps=3 format=2]

[ext_resource path="res://Materiais/Imagens/Epocas.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Epoca.gd" type="Script" id=2]

[node name="Epocas" type="Sprite"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 21.0
margin_right = 145.0
margin_bottom = 49.0
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="."]
margin_left = 232.0
margin_top = 24.0
margin_right = 370.0
margin_bottom = 52.0
align = 1
valign = 1

[node name="Dica1" type="TextureButton" parent="."]
margin_left = 78.0
margin_top = 181.0
margin_right = 183.0
margin_bottom = 276.0

[node name="Dica2" type="TextureButton" parent="."]
margin_left = 232.0
margin_top = 352.0
margin_right = 371.0
margin_bottom = 467.0

[node name="Dica3" type="TextureButton" parent="."]
margin_left = 44.0
margin_top = 347.0
margin_right = 117.0
margin_bottom = 498.0

[node name="Cazumbar" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 11.0
margin_right = 150.0
margin_bottom = 58.0

[node name="Voltar" type="TextureButton" parent="."]
margin_left = 224.0
margin_top = 11.0
margin_right = 376.0
margin_bottom = 62.0

[node name="Label3" type="Label" parent="."]
margin_left = 85.0
margin_top = 103.0
margin_right = 309.0
margin_bottom = 149.0

[connection signal="pressed" from="Dica1" to="." method="_on_Dica1_pressed"]
[connection signal="pressed" from="Dica2" to="." method="_on_Dica2_pressed"]
[connection signal="pressed" from="Dica3" to="." method="_on_Dica3_pressed"]
[connection signal="pressed" from="Cazumbar" to="." method="_on_Cazumbar_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
